--- a/src/login.html
+++ b/src/login.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ログイン</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/login.css">
+    <title>Document</title>
 </head>
 <body>
-    ここがインデックスに当たる場所だよ
+    
+    <div>
+        <form action="" method="post">
+            <label for="mozi">
+                mail<input type="text" name="mail" id="mail"><br>
+                password<input type="password" name="pass" id="pass"><br>
+                password again<input type="password" name="passagain" id="passagain"><br>
+                account name<input type="text" name="acntname" id="acntname"><br>
+                birthday<input type="date" name="birth" id="birth"><br>
+                <input type="submit" value="sign up">
+            </label>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
