--- a/src/home.html
+++ b/src/home.html
@@ -5,11 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/home.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
+    <link rel="stylesheet" href="./CSS/home.css">
+    <title>home</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-info bg-while" aria-label="Tenth navbar example">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
     
+          <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+              <!-- <li class="nav-item"> -->
+                <!-- <a class="nav-link active" aria-current="page" href="#">Centered nav only</a> -->
+              <!-- </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-bookmark-star" style="color: #A0522D;"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-hand-thumbs-up" style="color: #A0522D;"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #A0522D;" href="#">new</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #A0522D;" href="#">old</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown08" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown08">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <div class="container" id="con2">
+        <div class="row">
+            <div class="col-10">
+                <input type="text" class="form-control" style="background-color: #A0522D;" placeholder="search">
+            </div>
+            <div class="col-2">
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default"><i class="bi bi-search"style="color: #A0522D;"></i></button>
+                </span>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
