--- a/src/home.html
+++ b/src/home.html
@@ -57,7 +57,18 @@
                 </span>
             </div>
         </div>
-    </div>
+        <div class="card" style="width: 20rem;">
+          <img src="PNG/g1.png" class="card-img-top" alt="">
+          <div>
+            <i class="bi bi-hand-thumbs-up"></i>
+            <i class="bi bi-send"></i>
+            <i class="bi bi-bookmark-star"></i>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">title</h5>
+            <p class="card-text text-center">aaa</p>
+          </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
