--- a/src/home.html
+++ b/src/home.html
@@ -35,10 +35,7 @@
                 <a class="nav-link" href="#"><i class="bi bi-hand-thumbs-up" style="color: #A0522D;"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: #A0522D;" href="#">new</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color: #A0522D;" href="#">old</a>
+                <a class="nav-link" style="color: #A0522D;" href="Post.html">new</a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown08" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
@@ -65,7 +62,7 @@
             </div>
         </div>
         <div class="container-fluid">
-          <div class="row">
+          <div class="row row-cols-1 g-4">
             <div class="col-6">
               <div class="card mt-5" style="width: 24rem;" id="saito">
                 <img src="PNG/g1.png" class="card-img-top" alt="">
