リンク追加

--- a/src/CreateAccount.html
+++ b/src/CreateAccount.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form-wrapper">
         <h1>Sign Up</h1>
-        <form>
+        <form action="SignIn.html">
             <div class="form-item">
                 <label for="charname"></label>
                 <input type="text" name="charname" required="required" placeholder="Charname">
