--- a/src/ResetEnd.html
+++ b/src/ResetEnd.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form-wrapper">
         <h1>Check the E-mail box</h1>
-        <form>
+        <form action="SignIn.html">
 
           <div class="form-item">
         
