--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+  <form action="home2.html">
     <div class="form-wrapper">
         <h1>Sign In</h1>
         <form>
@@ -23,7 +24,7 @@
           </div>
 
           <div class="button-panel">
-            <input type="submit" class="button" title="Sign In" value="Sign In"></input>
+            <input type="submit" class="button" title="Sign In" value="Sign In" ></input>
           </div>
         </form>
         <div class="form-footer">
@@ -31,5 +32,6 @@
           <p><a href="ResettingPass.html">Forgot password?</a></p>
         </div>
       </div>
+    </form>
 </body>
 </html>
