--- a/src/ResettingPass.html
+++ b/src/ResettingPass.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form-wrapper">
         <h1>Resetting Password</h1>
-        <form>
+        <form action="ResetEnd.html">
 
           <div class="form-item">
             <label for="email"></label>
