--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/SignIn.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/SignIn.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div class="form-wrapper">
-        <h1>Sign In</h1>
-        <form>
+  <div class="form-wrapper">
+    <h1>Sign In</h1>
+    <form action="PHP/signin.php" method="post">
 
-          <div class="form-item">
-            <label for="email"></label>
-            <input type="email" name="email" required="required" placeholder="Email Address"></input>
-          </div>
-
-          <div class="form-item">
-            <label for="password"></label>
-            <input type="password" name="password" required="required" placeholder="Password"></input>
-          </div>
-
-          <div class="button-panel">
-            <input type="submit" class="button" title="Sign In" value="Sign In"></input>
-          </div>
-        </form>
-        <div class="form-footer">
-          <p><a href="CreateAccount.html">Create an account</a></p>
-          <p><a href="ResettingPass.html">Forgot password?</a></p>
-        </div>
+      <div class="form-item">
+        <label for="email"></label>
+        <input type="email" name="mail" required="required" placeholder="Email Address"></input>
       </div>
+
+      <div class="form-item">
+        <label for="password"></label>
+        <input type="password" name="pass" required="required" placeholder="Password"></input>
+      </div>
+
+      <div class="button-panel">
+        <input type="submit" class="button" title="Sign In" value="Sign In"></input>
+      </div>
+    </form>
+    <div class="form-footer">
+      <p><a href="CreateAccount.html">Create an account</a></p>
+      <p><a href="ResettingPass.html">Forgot password?</a></p>
+    </div>
+  </div>
 </body>
+
 </html>
