投稿のcssつなげる、ホームとリンクさせる

--- a/src/home2.html
+++ b/src/home2.html
@@ -26,8 +26,8 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <ul class="list-unstyled">
                 <!-- <li><a href="#" class="text-muted"><i class="bi bi-hand-thumbs-up"></i></a></li> -->
-                <li><a href="/profile/" class="text-muted"><i class="bi bi-person-circle"></i></a></li>
-                <li><a href="/toukou/index.html" class="text-muted"><i class="bi bi-pencil-square"></i></a></li>
+                <li><a href="" class="text-muted"><i class="bi bi-person-circle"></i></a></li>
+                <li><a href="index.html" class="text-muted"><i class="bi bi-pencil-square"></i></a></li>
                 <!-- <li><a href="SignIn.html" class="text-muted"><i class="bi bi-person-plus"></i></a></li> -->
                 <li><a href="#" class="text-muted"><i class="bi bi-person-x" id="logout"></i></a></li>
               </ul>
