--- a/src/CreateAccount.html
+++ b/src/CreateAccount.html
@@ -10,20 +10,20 @@
 <body>
     <div class="form-wrapper">
         <h1>Sign Up</h1>
-        <form action="SignIn.html">
+        <form action="PHP/login.php" method="post">
             <div class="form-item">
                 <label for="charname"></label>
-                <input type="text" name="charname" required="required" placeholder="Charname">
+                <input type="text" name="name" required="required" placeholder="Charname">
               </div>
 
           <div class="form-item">
             <label for="email"></label>
-            <input type="email" name="email" required="required" placeholder="Email Address"></input>
+            <input type="email" name="mail" required="required" placeholder="Email Address"></input>
           </div>
 
           <div class="form-item">
             <label for="password"></label>
-            <input type="password" name="password" required="required" placeholder="Password"></input>
+            <input type="password" name="pass" required="required" placeholder="Password"></input>
           </div>
 
           <div class="button-panel">
