--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -11,16 +11,16 @@
   <form action="home2.html">
     <div class="form-wrapper">
         <h1>Sign In</h1>
-        <form>
+        <form action="PHP/signin.php" method="post">
 
           <div class="form-item">
             <label for="email"></label>
-            <input type="email" name="email" required="required" placeholder="Email Address"></input>
+            <input type="email" name="mail" required="required" placeholder="Email Address"></input>
           </div>
 
           <div class="form-item">
             <label for="password"></label>
-            <input type="password" name="password" required="required" placeholder="Password"></input>
+            <input type="password" name="pass" required="required" placeholder="Password"></input>
           </div>
 
           <div class="button-panel">
