--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
@@ -14,13 +14,45 @@
 </head>
 
 <body>
+  
+  <header>
+    <div class="collapse bg-while" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4 class="text-muted">CssLabo</h4>
+            <p class="text-muted">CssLaboの説明?</p>
+          </div>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <ul class="list-unstyled">
+              <!-- <li><a href="#" class="text-muted"><i class="bi bi-hand-thumbs-up"></i></a></li> -->
+              <li><a href="" class="text-muted"><i class="bi bi-person-circle"></i></a></li>
+              <li><a href="index.html" class="text-muted"><i class="bi bi-pencil-square"></i></a></li>
+              <!-- <li><a href="SignIn.html" class="text-muted"><i class="bi bi-person-plus"></i></a></li> -->
+              <li><a href="#" class="text-muted"><i class="bi bi-person-x" id="logout"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navbar navbar-while bg-while shadow-sm">
+      <div class="container d-flex justify-content-between">
+        <a href="#" class="navbar-brand d-flex align-items-center">
+          <strong>CssLabo</strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
   <form action="#">
 
-    <header>
+    <!-- <header>
       <h2>Example Responsive Form</h2>
       <div>This form breaks at 600px and goes from a left-label form to a top-label form. At above 1200px, the labels
         align right.</div>
-    </header>
+    </header> -->
 
     <div>
       <label class="desc" id="title1" for="Field1">Title</label>
