tagのアイコン変更 tag→favoriteに変更

--- a/src/profile.html
+++ b/src/profile.html
@@ -80,7 +80,9 @@
         <div class="container1">
             <div class="tabs">
                 <div onclick="switchTab(event, 'tb_1')" class="tab-item active"><i class="fas fa-th"></i> Posts</div>
-                <div onclick="switchTab(event, 'tb_4')" class="tab-item"><i class="fas fa-tag"></i> Tags</div>
+                <div onclick="switchTab(event, 'tb_4')" class="tab-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                  </svg>&nbsp;Favorite</div>
             </div>
 
             <div class="tabs_content">
