トリマ完成！

--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -8,10 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-  <form action="home2.html">
     <div class="form-wrapper">
         <h1>Sign In</h1>
-        <form action="PHP/signin.php" method="post">
+        <form action="./PHP/signin.php" method="post">
 
           <div class="form-item">
             <label for="email"></label>
@@ -32,6 +31,5 @@
           <p><a href="ResettingPass.html">Forgot password?</a></p>
         </div>
       </div>
-    </form>
 </body>
 </html>
