--- a/src/profile.html
+++ b/src/profile.html
@@ -26,9 +26,9 @@
                         <h4 class="text-muted">Contact</h4>
                         <ul class="list-unstyled">
                             <li><a href="#" class="text-muted"><i class="bi bi-hand-thumbs-up"></i></a></li>
-                            <li><a href="Post.html" class="text-muted"><i class="bi bi-pencil-square"></i></a></li>
+                            <li><a href="#" class="text-muted"><i class="bi bi-pencil-square"></i></a></li>
                             <li><a href="#" class="text-muted"><i class="bi bi-person-plus"></i></a></li>
-                            <li><a href="#" class="text-muted"><i class="bi bi-person-x"></i></a></li>
+                            <li><a href="ResetEnd.html" class="text-muted"><i class="bi bi-person-x"></i></a></li>
                         </ul>
                     </div>
                 </div>
