--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-  <form action="home2.html">
+  <form action="home2.php">
     <div class="form-wrapper">
         <h1>Sign In</h1>
         <form action="PHP/signin.php" method="post">
